--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.fs-20{
+  font-size: 20px !important;
+}
+.fw-500{
+  font-weight: 500 !important;
+}
 input#submitButton1 {
   background: #3D55A5;
   border: 1px solid #3D55A5;
@@ -2994,7 +3000,7 @@ button, input, optgroup, select, textarea {
 }
  /* Finishing CSS Start */
  .wrappers.py-5.p_position {
-  bottom: -40px;
+  bottom: -56px;
 }
 
 .daysAndDetails {
@@ -3101,8 +3107,8 @@ text-align: center;
   position: relative;
   float: left;
   overflow: hidden;
-  margin: 10px 1%;
-  min-width: 320px;
+  margin: 5px 1% 0px;
+  min-width: 100%;
   max-width: 580px;
 
   border-radius: 15px;
@@ -3116,17 +3122,17 @@ text-align: center;
   display: block;
   opacity: .45;
   width: 105%;
-
+max-height: 100%;
   transition: opacity 0.35s, transform 0.35s;
   transform: translate3d(-23px, 0, 0);
   backface-visibility: hidden;
 }
 
 .video-gallery .gallery-item .gallery-item-caption {
-  padding: 2em;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 1.25em;
+  padding: 17px 2em;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 1.25em;
 }
 
 .video-gallery .gallery-item .gallery-item-caption,
@@ -3150,6 +3156,7 @@ text-align: center;
   position: relative;
   margin: 0;
   z-index: 10;
+  color: #fff;
 }
 
 .video-gallery .gallery-item p {
@@ -3210,7 +3217,7 @@ h6 {
 }
 .programTitleuser {
   background: #3D55A5;
-  padding: 2px;
+  padding: 10px;
   /* padding: 2px 0px 10px 0px; */
 
   border-radius: 7px;
@@ -3876,6 +3883,7 @@ li.nav-item1 {
   
     .background1 {
         padding-top: 30px!important;
+        background: linear-gradient(-197deg, rgba(0,0,0,.4),rgba(0,0,0,.4), #fff0, #fff0);
     }
     
     
@@ -3993,7 +4001,9 @@ li.nav-item1 {
 
 @media (min-width: 767px) and (max-width:992px) {
   
-
+.ps-0{
+  padding: 0px !important;
+}
 .wrappers.py-5.p_position {
     bottom: 40px !important;
 }
