--- a/src/App.css
+++ b/src/App.css
@@ -3281,7 +3281,7 @@ ol, .ser, dl {
 
 @media screen and (min-width: 768px) {
   .swiper-container {
-    width: 1140px;
+    width: 968px;
   }
 }
 
@@ -4078,4 +4078,24 @@ line-height: 40px;
   width: calc(14.2% - 2px) !important;
   margin: 5px !important;
   padding: 5px !important;
+}
+.Time_style .css-1d3z3hw-MuiOutlinedInput-notchedOutline {
+  border: none !important;
+}
+.Time_style .css-1xhypcz-MuiStack-root{
+  overflow: unset !important;
+  padding: 0px !important;
+}
+.Time_style input{
+  display: none !important;
+}
+
+.Time_style .css-1xhypcz-MuiStack-root>.MuiTextField-root{
+  min-width:0px !important;
+}
+
+.Time_style .css-1yq5fb3-MuiButtonBase-root-MuiIconButton-root{
+  padding: 0px;
+  width: 100%;
+  height: 100%;
 }
