--- a/src/App.css
+++ b/src/App.css
@@ -4082,5 +4082,28 @@ line-height: 40px;
 .findJobHome{
   background: url(./img/jobsHome.jpg) no-repeat;
   background-size: cover;
+  min-height: 300px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.greyBG{
+  background-color: rgba(22, 22, 22, .7);
+  width:100%;
+  height:100%;
+  top:0;
+  left: 0;
+  overflow: hidden;
+  border-radius: 10px;
   min-height: 350px;
+  padding:250px 40px 50px 40px;
+  text-align: center;
+}
+.findJobHome h2{
+  color:#fff;
+  font-weight: bold;
+}
+.findJobHome p{
+  color:#fff;
 }
